AUX_SOURCE_DIRECTORY (${CMAKE_CURRENT_SOURCE_DIR} LIB_SRC)
ADD_LIBRARY (kmu SHARED ${LIB_SRC})
ADD_LIBRARY (kmu_static STATIC ${LIB_SRC})
SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET_TARGET_PROPERTIES (kmu_static PROPERTIES OUTPUT_NAME kmu)
SET_TARGET_PROPERTIES (kmu PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (kmu_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (kmu PROPERTIES VERSION 1.1 SOVERSION 1)

# INSTALL (FILES *.h DESTINATION ${PROJECT_BINARY_DIR}/include/unity)
