AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} APP_SRC)
ADD_EXECUTABLE(kmuTest ${APP_SRC})
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
LINK_DIRECTORIES (${PROJECT_BINARY_DIR}/lib)
TARGET_LINK_LIBRARIES(kmuTest kmu unity)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/lib/unity)
