AUX_SOURCE_DIRECTORY (${CMAKE_CURRENT_SOURCE_DIR} LIB_SRC)
ADD_LIBRARY (unity SHARED ${LIB_SRC})
ADD_LIBRARY (unity_static STATIC ${LIB_SRC})
SET (LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)
SET_TARGET_PROPERTIES (unity_static PROPERTIES OUTPUT_NAME unity)
SET_TARGET_PROPERTIES (unity PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (unity_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
SET_TARGET_PROPERTIES (unity PROPERTIES VERSION 1.1 SOVERSION 1)

INSTALL (FILES unity.h DESTINATION ${PROJECT_BINARY_DIR}/include/unity)
